[project]
name = "lxrtools"
version = "0.1.0"
description = "Lixinger API proxy with TTL cache and rate limiting"
authors = [{name = "wisdomvalley"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
    "platformdirs>=4.3.0",
    "fake-useragent>=1.5.0",
    "markdownify>=1.2.2",
    "playwright>=1.57.0",
]
